--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videojs-spatial-navigation",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Spatial Navigation in Video.js",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -24,11 +24,10 @@
   },
   "homepage": "https://github.com/kyawswarthwin/videojs-spatial-navigation#readme",
   "dependencies": {
-    "jquery": "^3.7.0",
+    "cash-dom": "^8.1.5",
     "video.js": "^7"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.16",
     "@types/video.js": "^7.3.52",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
